--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -37,6 +37,11 @@ modules-left = bspwm
 modules-center = xwindow spotify
 modules-right = fcitx5 memory cpu battery date powermenu
 
+[module/xwindow]
+type = internal/xwindow
+label = %title:0:30:...%
+format = <label>
+
 [module/fcitx5]
 type = custom/script
 ; interval = 1
